<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GastosActivity">

    <TextView
            android:text="@string/gasto_label"
            android:layout_width="68dp"
            android:layout_height="25dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="28dp"
            android:layout_marginStart="16dp" android:id="@+id/textView" android:textAlignment="center"
            android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/editTextGasto" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="16dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextGasto" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:id="@+id/radioGroup">
        <RadioButton android:id="@+id/radioButtonComida"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:text="@string/categoria_comida"/>
        <RadioButton android:id="@+id/radioButtonBebida"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:text="@string/categoria_bebida"/>
        <RadioButton android:id="@+id/radioButtonTransporte"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:text="@string/categoria_transporte"/>
    </RadioGroup>
    <Button
            android:text="@string/button_guardar_gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonGuardarGasto"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
</android.support.constraint.ConstraintLayout>