<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultActivity">
    <TextView
            android:text="@string/total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/textViewTotalResult" android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:textSize="18sp" android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/label_hola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textViewNombre"
            app:layout_constraintEnd_toStartOf="@+id/textViewNombreResult" android:textSize="18sp"
            android:textColor="#3F51B5"/>
    <TextView
            android:text="@string/label_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/textViewNombreResult"
            app:layout_constraintStart_toEndOf="@+id/textViewNombre" app:layout_constraintEnd_toStartOf="@+id/textView4"
            android:layout_marginEnd="1dp" android:textSize="18sp" android:textColor="#3F51B5"/>
    <TextView
            android:text="@string/edad_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textViewNombreResult"
            app:layout_constraintEnd_toStartOf="@+id/textViewEdadResult" android:textSize="18sp"
            android:textColor="#3F51B5"/>
    <TextView
            android:text="@string/anios_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textViewEdadResult" android:textSize="18sp"
            android:textColor="#3F51B5"/>
    <TextView
            android:text="@string/categoria_comida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="36dp"
            android:id="@+id/textView6" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewNombre"
            app:layout_constraintEnd_toStartOf="@+id/textViewComidaGasto" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:textColor="#3F51B5"/>
    <TextView
            android:text="@string/categoria_bebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="42dp"
            android:id="@+id/textView7" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/textViewBebidaGasto" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:textColor="#3F51B5"/>
    <TextView
            android:text="@string/categoria_transporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView8" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/textViewTransporteGasto" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:textColor="#3F51B5"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewComidaGasto" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:textSize="18sp" android:textColor="#3F51B5"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewBebidaGasto" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewComidaGasto" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView7" android:textSize="18sp" android:textColor="#3F51B5"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTransporteGasto"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textViewBebidaGasto"
            android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/textView8"
            android:textSize="18sp" android:textColor="#3F51B5"/>
    <TextView
            android:text="@string/anios_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEdadResult" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView5" android:textSize="18sp" android:textColor="#3F51B5"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTotalResult" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTransporteGasto"
            android:textSize="18sp" android:textColor="#3F51B5" app:layout_constraintStart_toEndOf="@+id/textView13"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>